# monitor-server

./: .env  .gitignore  .pre-commit-config.yaml  docker-compose.yml  justfile  pyproject.toml
monitor_server/application/db/: README  alembic.ini  nomenclature.py  script.py.mako
monitor_server/application/db/versions/: 67466d1fdecf_add_cpu_type_to_executioncontext_table.py  b3eb406733c3_basic_support_for_pytest_monitor_metrics.py  c145aced177c_cascading_delete.py
monitor_server/domain/dto/: abc.py  common.py  machines.py  metrics.py  sessions.py
monitor_server/domain/entities/: abc.py  machines.py  metrics.py  sessions.py
monitor_server/domain/models/: abc.py  aggregates.py  common.py  machines.py  metrics.py  sessions.py
monitor_server/domain/use_cases/: abc.py  common.py  exceptions.py
monitor_server/domain/use_cases/machines/: crud.py
monitor_server/domain/use_cases/metrics/: crud.py
monitor_server/domain/use_cases/sessions/: crud.py
monitor_server/infrastructure/: exceptions.py
monitor_server/infrastructure/config/: README.md  __init__.py  app.py  base.py  errors.py  loader.py  service.py
monitor_server/infrastructure/orm/: config.py  custom_types.py  declarative.py  engine.py  errors.py  pageable.py  presenter.py  repositories.py
monitor_server/infrastructure/persistence/: __init__.py  converters.py  exceptions.py  machines.py  mapper.py  metrics.py  models.py  services.py  sessions.py
monitor_server/tests/: conftest.py
monitor_server/tests/domain/entities/: test_machines.py  test_metrics.py  test_sessions.py
monitor_server/tests/domain/use_cases/: test_common_use_cases.py  test_machines_crud.py  test_metrics_crud.py  test_sessions_crud.py
monitor_server/tests/infrastructure/config/: conftest.py  test_application_config.py  test_config_service.py  test_loader.py
monitor_server/tests/infrastructure/orm/: conftest.py  test_declarative_types.py  test_orm_engine.py  test_repositories.py
monitor_server/tests/infrastructure/persistence/: conftest.py  test_machines.py  test_metrics.py  test_services.py  test_sessions.py
monitor_server/tests/sdk/config/: builders.py
monitor_server/tests/sdk/persistence/: generators.py  views.py
